tests/fail/return_ref.stderr
tests/fail/return_ref.tk:3:12: error[E0455]: Returning reference to local variable 'x' is unsafe
tests/fail/return_ref.tk:8:16: error[E0455]: Returning reference to local variable 'x' is unsafe
tests/fail/return_ref.tk:10:12: error[E0455]: Returning reference to local variable 'y' is unsafe
tests/fail/return_ref.tk:27:31: error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
tests/fail/return_ref.tk:32:21: error[E0456]: Object 'ref_a' (lived longer) cannot depend on 'b' (lived shorter)
